Fix app review issue

--- a/DynamicArt/Resources/Help/help[index].html
+++ b/DynamicArt/Resources/Help/help[index].html
@@ -26,7 +26,7 @@
 <div class="subtitle"><a href="#">Back to Top</a><a id="introduction"></a><h2>Introduction</h2></div><p> <strong>Dynamic ART is a graphical programming environment on iPad.</strong> It's easy to create amazing artwork, animations, interactions and music with Dynamic ART. You can also share your creations with your friends. <br />
 You don't need to study complex syntax of computer languages. You just drag and drop a set of blocks and connect them together. It will be a fun way to build your own programs. <br />
 It can be used for beginners to learn and practice mathematical, computational ideas and creative thinking. </p>
-<p> If you have any questions or suggestions, please sent e-mails to <a href="mailto:support@dynamicart.uhostall.com">support@dynamicart.uhostall.com</a>. </p>
+<p> If you have any questions or suggestions, please sent e-mails to <a href="mailto:codingpotato@gmail.com">codingpotato@gmail.com</a>. </p>
 <div class="subtitle"><a href="#">Back to Top</a><a id="features"></a><h2>Features</h2></div><ol>
   <li>
     <strong>Multi-programs</strong> management.
